--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "private": true,
     "dependencies": {
         "express": "3.3.4",
-        "ejs":"0.8.4"
+        "ejs":"0.8.4",
+        "mongodb": "1.1.11"
     },
     "engines": {
         "node": "0.10.x",
